# college-assignment-vehicle-fleet

./: .gitignore  README.md  app.py  database.py  main.py  models.py  problem_statement.md  pyproject.toml  seed.py
schema/: mutations.py  queries.py  types.py
